LIBXCM_MAJOR_VERSION=1
LIBXCM_MINOR_VERSION=5
LIBXCM_MICRO_VERSION=0
LIBXCM_VERSION=$LIBXCM_MAJOR_VERSION.$LIBXCM_MINOR_VERSION.${LIBXCM_MICRO_VERSION}

AC_INIT([libXcm], 1.5.0,
         https://sourceforge.net/tracker/?group_id=177017&atid=879553,
         libXcm,
         http://www.oyranos.org)
AC_CONFIG_AUX_DIR([build-aux])

AC_SUBST(LIBXCM_VERSION)

LIBTOOL_CURRENT=$LIBXCM_MAJOR_VERSION
LIBTOOL_REVISION=$LIBXCM_MINOR_VERSION
LIBTOOL_AGE=$LIBXCM_MICRO_VERSION
LIBTOOL_VERSION=$LIBTOOL_CURRENT:$LIBTOOL_REVISION:$LIBTOOL_AGE
AC_SUBST(LIBTOOL_VERSION)

AC_CONFIG_HEADERS([config.h])
AC_CONFIG_MACRO_DIR([m4])
AM_INIT_AUTOMAKE([-Wall foreign subdir-objects], ${LIBXCM_VERSION})
AC_PROG_CC
AM_PROG_CC_C_O
AC_DISABLE_STATIC
AM_PROG_LIBTOOL
AM_SILENT_RULES

PKG_CHECK_MODULES([libX11], [x11])
PKG_CHECK_MODULES([libXfixes], [xfixes])
PKG_CHECK_MODULES([libXmu], [xmu])

AC_CONFIG_FILES([Makefile src/Makefile xcm.pc])
AC_OUTPUT
