define([MAJOR],[0])
define([MINOR],[5])
define([MICRO],[0])
AC_INIT([libXcm], [MAJOR.MINOR.MICRO],
         https://sourceforge.net/tracker/?group_id=177017&atid=879553,
         libXcm,
         http://www.oyranos.org)
LIBTOOL_CURRENT=0
LIBTOOL_REVISION=5
LIBTOOL_AGE=0

AC_CONFIG_AUX_DIR([build-aux])

AC_CONFIG_HEADERS([config.h])
AC_CONFIG_MACRO_DIR([m4])
AM_INIT_AUTOMAKE([-Wall foreign subdir-objects])
AC_PROG_CC
AM_PROG_CC_C_O
AC_DISABLE_STATIC
AM_PROG_LIBTOOL
AM_SILENT_RULES

AC_SUBST(LIBTOOL_VERSION)
AC_SUBST(XCM_PACKAGE_MAJOR)
AC_SUBST(XCM_PACKAGE_MINOR)
AC_SUBST(XCM_PACKAGE_MICRO)
AC_SUBST(PACKAGE_VERSION)
AC_SUBST(HAVE_X11)
AC_SUBST(HAVE_LINUX)

XCM_PACKAGE_MAJOR=MAJOR
XCM_PACKAGE_MINOR=MINOR
XCM_PACKAGE_MICRO=MICRO

LIBTOOL_VERSION=$LIBTOOL_CURRENT:$LIBTOOL_REVISION:$LIBTOOL_AGE

PKG_CHECK_EXISTS([x11], [
	PKG_CHECK_MODULES([libX11], [x11])
	PKG_CHECK_MODULES([libXfixes], [xfixes])
	PKG_CHECK_MODULES([libXmu], [xmu])
	AM_CONDITIONAL([HAVE_X11], [true])
        HAVE_X11="#define HAVE_X11 1"
], [
	AC_MSG_CHECKING([for libX11])
	AC_MSG_RESULT([no])
	AM_CONDITIONAL([HAVE_X11], [false])
        HAVE_X11=
])

HAVE_LINUX="`uname | grep Linux | wc -l`"

AC_CONFIG_FILES([Makefile src/Makefile xcm.pc Doxyfile libXcm.spec
include/XcmVersion.h])
AC_OUTPUT
