#pkg-config files
IF(ENABLE_INSTALL)
  SET( prefix ${CMAKE_INSTALL_PREFIX} )
  SET( exec_prefix ${CMAKE_INSTALL_PREFIX} )
  SET( libdir ${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR} )
  SET( includedir ${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_INCLUDEDIR}/X11/Xcm )
  SET( includedir ${includedir} PARENT_SCOPE )

  IF(HAVE_LINUX)
    CONFIGURE_FILE(
		"${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_DOWN_NAME}-ddc.pc.in"
		"${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_DOWN_NAME}-ddc.pc"
		@ONLY
       )
    INSTALL( FILES
		"${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_DOWN_NAME}-ddc.pc"
		DESTINATION ${CMAKE_INSTALL_LIBDIR}/${TARGET_PKGCONFIG_FOLDER}
       )
  ENDIF(HAVE_LINUX)

  IF( XMU_FOUND )
    SET( PKG_CONFIG_PRIVATE_X11_PKG xcm-x11 )
    CONFIGURE_FILE(
		"${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_DOWN_NAME}-x11.pc.in"
		"${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_DOWN_NAME}-x11.pc"
		@ONLY
       )
    INSTALL( FILES
		"${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_DOWN_NAME}-x11.pc"
		DESTINATION ${CMAKE_INSTALL_LIBDIR}/${TARGET_PKGCONFIG_FOLDER}
       )
  ENDIF( XMU_FOUND )

  CONFIGURE_FILE(
		"${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_DOWN_NAME}-edid.pc.in"
		"${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_DOWN_NAME}-edid.pc"
		@ONLY
       )
  INSTALL( FILES
		"${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_DOWN_NAME}-edid.pc"
		DESTINATION ${CMAKE_INSTALL_LIBDIR}/${TARGET_PKGCONFIG_FOLDER}
       )

  CONFIGURE_FILE(
		"${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_DOWN_NAME}.pc.in"
		"${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_DOWN_NAME}.pc"
		@ONLY
       )
  INSTALL( FILES
		"${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_DOWN_NAME}.pc"
		DESTINATION ${CMAKE_INSTALL_LIBDIR}/${TARGET_PKGCONFIG_FOLDER}
       )

ENDIF(ENABLE_INSTALL)

CONFIGURE_FILE(
		"${CMAKE_CURRENT_SOURCE_DIR}/libXcm.spec.in"
		"${CMAKE_CURRENT_BINARY_DIR}/libXcm.spec"
		@ONLY
       )

